[metadata]
name = wgstarman
version = 0.0.1
author = Giacomo Furlan
author_email = py-wgstarman@giacomofurlan.name
description = WireGuard manager to connect two or more peers in a star VPN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elegos/py-wgstarman
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: System :: Networking
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    wgstarman = wgstarman.cli.wgstarman:main

[options.packages.find]
where = src